--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -11,8 +11,8 @@
       </li>
       <li class="main-header_item">
         <a
-          class="<%= path === '/add-product' ? 'active' : ''%>"
-          href="/admin/add-product"
+          class="<%= path === '/products' ? 'active' : ''%>"
+          href="/admin/products"
           >Product Admin</a
         >
       </li>
