--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,6 +1,38 @@
-<%- include('../includes/head.ejs')%>
-</head>
-<body>
-    <%- include('../includes/navigation.ejs')%>
-    <h1>Welcome!</h1>
-<%- include('../includes/end.ejs')%>
+<%- include('../includes/head.ejs') %>
+  </head>
+
+  <body>
+   <%- include('../includes/navigation.ejs') %>
+
+    <main>
+      <% if(prods.length > 0) { %>
+      <div class="grid">
+        <% for(let product of prods) {%>
+        <article class="card product-item">
+          <header class="card__header">
+            <h1 class="product__title"><%= product.title%></h1>
+            <div class="card__image">
+              <img
+                src="http://res.freestockphotos.biz/pictures/14/14371-illustration-of-a-book-pv.png"
+                ,
+                alt="A book"
+              />
+            </div>
+            <div class="card__content">
+              <h2 class="product__price">$19.99</h2>
+              <p class="product__decription">
+                A very interisting book about even more interesting things
+              </p>
+            </div>
+            <div class="card__actions">
+              <button type="submit">Add Cart</button>
+            </div>
+          </header>
+        </article>
+        <%}%>
+      </div>
+      <%} else {%>
+      <h1>No products found!</h1>
+      <%}%>
+    </main>
+<%- include('../includes/end.ejs') %>
