new fields added to add-product.ejs

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -12,3 +12,4 @@
     />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/css/form.css">
