--- a/views/404-error.ejs
+++ b/views/404-error.ejs
@@ -3,5 +3,5 @@
 
 <body>
  <%- include('includes/navigation.ejs') %>
-  <main><h1>No products found!</h1></main>
+  <main><h1>404 Error, Page not found!</h1></main>
 <%- include('includes/end.ejs') %>
