--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -22,7 +22,7 @@
           <label for="description">Product:</label>
           <textarea name="description" id="description" rows="5"></textarea>
         </div>
-        <button type="submit">Add Product</button>
+        <button class="btn" type="submit">Add Product</button>
         </form>
     </main>
  <%- include('../includes/end.ejs') %>
