--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -25,8 +25,11 @@
               </p>
             </div>
             <div class="card__actions">
-              <button type="submit">Add Cart</button>
-            </div>
+                <a class="btn" href="/edit-product">Edit</a>
+                <form action="/delete-product" method="POST">
+                  <button class="btn" type="submit">Delete</button>
+                </form>
+              </div>
           </header>
         </article>
         <%}%>
