passing product id using url

--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -21,7 +21,7 @@
               </p>
             </div>
             <div class="card__actions">
-              <button type="submit">Add Cart</button>
+              <button class="btn" type="submit">Add Cart</button>
             </div>
           </header>
         </article>
