--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+*{
+    box-sizing: border-box;
+}
+
 body, html {
     margin: 0;
     padding: 0;
@@ -5,9 +11,12 @@ body, html {
 }
 
 main {
-    height: 100vh;
-    width: 100%;
     padding: 1rem;
+    margin: auto;
+}
+
+form {
+    display: inline;
 }
 
 .main-header {
@@ -15,6 +24,8 @@ main {
     height: 3.5rem;
     background-color: rgb(14, 14, 99);
     padding: 0 1.5rem;
+    display: flex;
+    align-items: center;
 }
 
 .main-header_nav {
@@ -40,9 +51,89 @@ main {
     color: white;
 }
 
-.main-header_item a:hover, .main-header_item a:active, .main-header_item a.active {
+.main-header_item a:hover, 
+.main-header_item a:active, 
+.main-header_item a.active {
     color: rgb(104, 152, 224);
 }
+
+.mobile-nav {
+    width: 30rem;
+    height: 100vh;
+    max-width: 90%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background: white;
+    z-index: 10;
+    padding: 2rem 1rem 1rem 2rem;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-out;
+  }
+  
+  .mobile-nav.open {
+    transform: translateX(0);
+  }
+  
+  .mobile-nav__item-list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .mobile-nav__item {
+    margin: 1rem;
+    padding: 0;
+  }
+  
+  .mobile-nav__item a {
+    text-decoration: none;
+    color: black;
+    font-size: 1.5rem;
+    padding: 0.5rem 2rem;
+  }
+  
+  .mobile-nav__item a:active,
+  .mobile-nav__item a:hover,
+  .mobile-nav__item a.active {
+    background: #00695c;
+    color: white;
+    border-radius: 3px;
+  }
+  
+  #side-menu-toggle {
+    border: 1px solid white;
+    font: inherit;
+    padding: 0.5rem;
+    display: block;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+  }
+  
+  #side-menu-toggle:focus {
+    outline: none;
+  }
+  
+  #side-menu-toggle:active,
+  #side-menu-toggle:hover {
+    color: #ffeb3b;
+    border-color: #ffeb3b;
+  }
+  
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 5;
+    display: none;
+  }
+  
 
 .grid {
     display: flex;
@@ -76,7 +167,6 @@ main {
   }
   
   .card__actions {
-      display: flex;
       padding: 1rem;
       text-align: center;
   }
@@ -86,3 +176,13 @@ main {
       margin: 0 0.25rem;
   }
 
+  @media (min-width: 768px) {
+    .main-header__nav {
+      display: flex;
+    }
+  
+    #side-menu-toggle {
+      display: none;
+    }
+  }
+  
