--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,53 +1,9 @@
-body,
-html {
-  margin: 0;
-  padding: 0;
-  font-family: 'Montserrat';
+.product-form {
+  width: 20rem;
+  max-width: 90%;
+  margin: auto;
+  display: block;
 }
-
-main {
-  height: 100vh;
-  width: 100%;
-  padding: 1rem;
-}
-
-.main-header {
-  width: 100%;
-  height: 3.5rem;
-  background-color: rgb(14, 14, 99);
-  padding: 0 1.5rem;
-}
-
-.main-header_nav {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.main-header_item-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-.main-header_item {
-  margin: 0 1.5rem;
-  padding: 0;
-}
-
-.main-header_item a {
-  text-decoration: none;
-  color: white;
-}
-
-.main-header_item a:hover,
-.main-header_item a:active,
-.main-header_item a.active {
-  color: rgb(104, 152, 224);
-}
-
-
 
 .product-item {
   width: 20rem;
