--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -2,7 +2,7 @@
   <nav class="main-header_nav">
     <ul class="main-header_item-list">
       <li class="main-header_item">
-        <a class="<%= path === '/' ? 'active' : ' ' %>" href="/index">Shop</a>
+        <a class="<%= path === '/index' ? 'active' : ' ' %>" href="/index">Shop</a>
       </li>
       <li class="main-header_item">
         <a
