--- a/views/shop/products-list.ejs
+++ b/views/shop/products-list.ejs
@@ -22,6 +22,7 @@
             </div>
             <div class="card__actions">
               <form action="/add-to-cart" method="POST">
+                <a href="/product/<%= product.id%>" class="btn">Details</a>
                 <button class="btn" type="submit">Add Cart</button>
               </form>
             </div>
