--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -21,7 +21,8 @@
               </p>
             </div>
             <div class="card__actions">
-              <button class="btn" type="submit">Add Cart</button>
+            <a href="/product/<%= product.id%>" class="btn">Details</a>
+            <%- include('../includes/add-cart.ejs', {product:product})%>
             </div>
           </header>
         </article>
