--- a/views/shop/product-details.ejs
+++ b/views/shop/product-details.ejs
@@ -2,14 +2,19 @@
 </head>
 <body>
     <%- include('../includes/navigation.ejs')%>
-    <main>
+    <main class="info">
         <div>
-            <img src="<%= prod.imageURL %>" alt="">
+            <img class="imgDetail"src="<%= product.imageURL %>" alt="<%= product.title%>">
         </div>
-        <div>
-            <h1><%= prod.title %></h1>
-            <h3>$<%= prod.price%></h3>
-            <p><%= prod.description%></p>
+        <hr>
+        <div >
+            <h1><%= product.title %></h1>
+            <h3>$<%= product.price%></h3>
+            <p><%= product.description%></p>
         </div>
+        <form action="/cart" method="POST">
+        <input type="hidden" value="<%= product.id%>" name="productId">
+        <button type="submit" class="btn">Add Cart</button>
+        </form>
     </main>
 <%- include('../includes/end.ejs')%>
