--- a/views/shop/products-list.ejs
+++ b/views/shop/products-list.ejs
@@ -21,10 +21,8 @@
               </p>
             </div>
             <div class="card__actions">
-              <form action="/add-to-cart" method="POST">
-                <a href="/product/<%= product.id%>" class="btn">Details</a>
-                <button class="btn" type="submit">Add Cart</button>
-              </form>
+              <a href="/product/<%= product.id%>" class="btn">Details</a>
+              <%- include('../includes/add-cart.ejs', {product: product})%>
             </div>
           </header>
         </article>
