--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -10,26 +10,20 @@
         <% for(let product of prods) {%>
         <article class="card product-item">
           <header class="card__header">
-            <h1 class="product__title"><%= product.title%></h1>
+            <h1 class="product__title"><%= product.title %></h1>
             <div class="card__image">
-              <img
-                src="http://res.freestockphotos.biz/pictures/14/14371-illustration-of-a-book-pv.png"
-                ,
-                alt="A book"
-              />
+              <img src="<%= product.imageURL %>"/>
             </div>
             <div class="card__content">
-              <h2 class="product__price">$19.99</h2>
+              <h2 class="product__price">$<%= product.price %></h2>
               <p class="product__decription">
-                A very interisting book about even more interesting things
+                <%= product.description %>
               </p>
             </div>
             <div class="card__actions">
-                <a class="btn" href="/edit-product">Edit</a>
-                <form action="/delete-product" method="POST">
-                  <button class="btn" type="submit">Delete</button>
-                </form>
-              </div>
+              <a href="/admin/edit-product/<%= product.id%>" class="btn">Edit</a>
+              <a href="/delete-product/<%= product.id%>" class="btn">Delete</a>
+            </div>
           </header>
         </article>
         <%}%>
