--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,7 +21,7 @@
               </p>
             </div>
             <div class="card__actions">
-              <a href="/admin/edit-product/<%= product.id%>" class="btn">Edit</a>
+              <a href="/admin/edit-product/<%= product.id%>?edit=true" class="btn">Edit</a>
               <a href="/delete-product/<%= product.id%>" class="btn">Delete</a>
             </div>
           </header>
