--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -22,7 +22,10 @@
             </div>
             <div class="card__actions">
               <a href="/admin/edit-product/<%= product.id%>?edit=true" class="btn">Edit</a>
-              <a href="/delete-product/<%= product.id%>" class="btn">Delete</a>
+              <form action="/admin/delete-product" method="POST">
+              <input type="hidden" name="productId" value="<%= product.id%>">  
+              <button type="submit" class="btn">Delete</button>
+              </form>
             </div>
           </header>
         </article>
