--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,7 +3,20 @@
 <body>
 <%- include('../includes/navigation.ejs')%>
 <main>
-  
+ <% if(cart.products.length > 0){%>
+ <% for(let product of cart.products) {%>
+     <h1><%= product.id%></h1>
+     <hr>
+     <h3><%= product.qty%></h3>
+     <form action="/cart-remove" method="POST">
+     <input type="hidden" name="productId" value="<%= product.id%>">
+     <button type="submit" class="btn">Remove</button>
+     </form>
+  <%}%>
+  <hr>
+    <%= cart.totalPrice%>
+<%}else{%>
+    <h1>Cart Empty</h1>
+<%}%>
 </main>
-
 <%- include('../includes/end.ejs')%>
