--- a/views/shop/products-list.ejs
+++ b/views/shop/products-list.ejs
@@ -21,7 +21,7 @@
               </p>
             </div>
             <div class="card__actions">
-              <a href="/product/<%= product.id%>" class="btn">Details</a>
+              <a href="/product/<%= product._id%>" class="btn">Details</a>
               <%- include('../includes/add-cart.ejs', {product: product})%>
             </div>
           </header>
