--- a/views/includes/add-cart.ejs
+++ b/views/includes/add-cart.ejs
@@ -1,4 +1,4 @@
 <form action="/cart" method="POST">
-    <input type="hidden" value="<%= product.id%>" name="productId">
-    <button type="submit" class="btn">Add Cart</button>
+    <input type="hidden" value="<%= product._id%>" name="productId">
+    <button type="submit" class="btn">Add to Cart</button>
   </form>
