--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,18 +3,16 @@
 <body>
 <%- include('../includes/navigation.ejs')%>
 <main>
- <% if(cart.products.length > 0){%>
- <% for(let product of cart.products) {%>
-     <h1><%= product.id%></h1>
+ <% if(cart.length > 0){%>
+ <% for(let product of cart) {%>
+     <h1><%= product.title%> (<%= product.quantity%>)</h1>
      <hr>
-     <h3><%= product.qty%></h3>
+     <h3>$<%= product.price%> (each)</h3>
      <form action="/cart-remove" method="POST">
-     <input type="hidden" name="productId" value="<%= product.id%>">
+     <input type="hidden" name="productId" value="<%= product._id%>">
      <button type="submit" class="btn">Remove</button>
      </form>
   <%}%>
-  <hr>
-    <%= cart.totalPrice%>
 <%}else{%>
     <h1>Cart Empty</h1>
 <%}%>
