order features added

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -13,6 +13,9 @@
      <button type="submit" class="btn">Remove</button>
      </form>
   <%}%>
+  <hr>
+  <br>
+  <a href="/add-order" class="btn">Place Order!</a>
 <%}else{%>
     <h1>Cart Empty</h1>
 <%}%>
