--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -24,7 +24,7 @@
               <a href="/admin/edit-product/<%= product._id%>?edit=true" class="btn">Edit</a>
               <form action="/admin/delete-product" method="POST">
               <input type="hidden" name="productId" value="<%= product._id%>">  
-              <button type="submit" class="btn">Delete</button>
+              <button type="submit" class="btn danger">Delete</button>
               </form>
             </div>
           </header>
