--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -2,7 +2,9 @@
   <nav class="main-header_nav">
     <ul class="main-header_item-list">
       <li class="main-header_item">
-        <a class="<%= path === '/index' ? 'active' : ' ' %>" href="/index">Shop</a>
+        <a class="<%= path === '/index' ? 'active' : ' ' %>" href="/index"
+          >Shop</a
+        >
       </li>
       <li class="main-header_item">
         <a
@@ -11,6 +13,7 @@
           >Products</a
         >
       </li>
+      <% if(isAuthenticated) { %>
       <li class="main-header_item">
         <a class="<%= path === '/cart' ? 'active' : ' ' %>" href="/cart"
           >Cart</a
@@ -22,15 +25,16 @@
         >
       </li>
       <li class="main-header_item">
+        <a class="<%= path === '/checkout' ? 'active' : '' %>" href="/checkout"
+          >Checkout</a
+        >
+      </li>
+
+      <li class="main-header_item">
         <a
           class="<%= path === '/add-product' ? 'active' : '' %>"
           href="/admin/add-product"
           >Add Product</a
-        >
-      </li>
-      <li class="main-header_item">
-        <a class="<%= path === '/checkout' ? 'active' : '' %>" href="/checkout"
-          >Checkout</a
         >
       </li>
       <li class="main-header_item">
@@ -40,6 +44,22 @@
           >Product Admin</a
         >
       </li>
+      <% } %>
+    </ul>
+    <% if (!isAuthenticated) {%>
+    <ul class="main-header_item-list">
+      <li class="main-header_item ">
+        <a class="<%= path === '/login' ? 'active' : ''%>" href="/login"
+          >Login</a
+        >
+      </li>
+      <% } else { %>
+      <li class="main-header_item ">
+        <form action="/logout" method="post">
+          <button type="submit" class="nav_button">Logout</button>
+        </form>
+      </li>
+      <% } %>
     </ul>
   </nav>
 </header>
