--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,8 +22,10 @@
             </div>
             <div class="card__actions">
             <a href="/product/<%= product._id%>" class="btn">Details</a>
-            <%- include('../includes/add-cart.ejs', {product:product})%>
-            </div>
+            <% if(isAuthenticated) {%>
+              <%- include('../includes/add-cart.ejs', {product:product})%>
+            <% } %>
+          </div>
           </header>
         </article>
         <%}%>
