--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -53,6 +53,11 @@
           >Login</a
         >
       </li>
+      <li class="main-header_item ">
+        <a class="<%= path === '/register' ? 'active' : ''%>" href="/register"
+          >Register</a
+        >
+      </li>
       <% } else { %>
       <li class="main-header_item ">
         <form action="/logout" method="post">
