basic registration feature implemented

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -5,7 +5,7 @@
   <%- include('../includes/navigation.ejs') %>
 
     <main>
-      <form action="/signup" method="POST" class="product-form">
+      <form action="/register" method="POST" class="product-form">
         <div class="form-control">
           <label for="email">Email:</label>
           <input type="email" name="email" id="email" />
@@ -16,7 +16,7 @@
         </div>
         <div class="form-control">
           <label for="confirm-password">Confirm Password:</label>
-          <input type="password" name="confirm-password" id="confirm-password" />
+          <input type="password" name="confirmPassword" id="confirmPassword" />
         </div>
         <button class="btn" type="submit">Register</button>
         </form>
