--- a/public/css/main.css
+++ b/public/css/main.css
@@ -222,6 +222,11 @@ li {
   color: red;
 }
 
+.centered {
+  margin: auto;
+  text-align: center
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
