reset user's password option added

--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -5,18 +5,24 @@
   <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if (errorMessage.length > 0) {%>
-          <div class="user-message user-message--error">
-              <%= errorMessage%>
-          </div>
-        <% } %>
-      <form action="/login" method="POST" class="product-form">
+      <% if (errorMessage.length > 0) {%>
+        <div class="user-message user-message--error">
+            <%= errorMessage%>
+        </div>
+      <% } %>
+      <form action="/reset-password" method="POST" class="product-form">
         <div class="form-control">
-          <label for="email">Email:</label>
-          <input type="email" name="email" id="email" />
+          <label for="password">New Password:</label>
+          <input type="password" name="password" id="password" />
+        </div>
+        <div class="form-control">
+          <label for="confirm-password">Confirm Password:</label>
+          <input type="password" name="confirmPassword" id="confirmPassword" />
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken%>">
-        <button class="btn" type="submit">Send</button>
+        <input type="hidden" name="userId" value="<%= userId%>">
+        <input type="hidden" name="userToken" value="<%= userToken%>">
+        <button class="btn" type="submit">Reset Password</button>
         </form>
     </main>
  <%- include('../includes/end.ejs') %>
