--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -54,7 +54,7 @@
         >
       </li>
       <li class="main-header_item ">
-        <a class="<%= path === '/register' ? 'active' : ''%>" href="/signin"
+        <a class="<%= path === '/signin' ? 'active' : ''%>" href="/signin"
           >Sign In</a
         >
       </li>
