--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -10,20 +10,13 @@
               <%= errorMessage%>
           </div>
         <% } %>
-      <form action="/login" method="POST" class="product-form">
+      <form action="/reset" method="POST" class="product-form">
         <div class="form-control">
           <label for="email">Email:</label>
           <input type="email" name="email" id="email" />
         </div>
-        <div class="form-control">
-          <label for="password">Password:</label>
-          <input type="password" name="password" id="password" />
-        </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken%>">
-        <button class="btn" type="submit">Login</button>
+        <button class="btn" type="submit">Send</button>
         </form>
-        <div class= "centered">
-          <a href="/reset">Reset Password</a>
-        </div>
     </main>
  <%- include('../includes/end.ejs') %>
