email validation added using express-validation

--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -10,7 +10,7 @@
             <%= errorMessage%>
         </div>
       <% } %>
-      <form action="/signin" method="POST" class="product-form">
+      <form action="/signin" method="POST" class="product-form" novalidate>
         <div class="form-control">
           <label for="email">Email:</label>
           <input type="email" name="email" id="email" />
