UX improved when there are errors at signin

--- a/views/auth/signin.ejs
+++ b/views/auth/signin.ejs
@@ -13,15 +13,30 @@
       <form action="/signin" method="POST" class="product-form" novalidate>
         <div class="form-control">
           <label for="email">Email:</label>
-          <input type="email" name="email" id="email" />
+          <input 
+            type="email" 
+            name="email" 
+            id="email" 
+            value="<%= oldInputs.email%>" 
+            class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : ''%>"/>
         </div>
         <div class="form-control">
           <label for="password">Password:</label>
-          <input type="password" name="password" id="password" />
+          <input
+             type="password" 
+             name="password" 
+             id="password" 
+             value="<%= oldInputs.password %>" 
+             class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"/>
         </div>
         <div class="form-control">
           <label for="confirm-password">Confirm Password:</label>
-          <input type="password" name="confirmPassword" id="confirmPassword" />
+          <input 
+            type="password" 
+            name="confirmPassword" 
+            id="confirmPassword" 
+            value="<%= oldInputs.confirmPassword %>".
+            class="<%= validationErrors.find(e => e.param === 'confirmPassword') ? 'invalid' : '' %>"/>
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken%>">
         <button class="btn" type="submit">Sign In</button>
