--- a/views/500-error.ejs
+++ b/views/500-error.ejs
@@ -5,6 +5,6 @@
  <%- include('includes/navigation.ejs') %>
   <main>
       <h1>Internal Error!</h1>
-      <p>An Internal Error has occur, we are working on fixing this, we apologize for the inconvinience</p>
+      <p>An Internal Error has occurred, we are working on fixing this, we apologize for the inconvinience</p>
 </main>
 <%- include('includes/end.ejs') %>
