--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -12,7 +12,7 @@
           <header class="card__header">
             <h1 class="product__title"><%= product.title %></h1>
             <div class="card__image">
-              <img src="<%= product.imageURL %>"/>
+              <img src="/<%= product.imageURL %>"/>
             </div>
             <div class="card__content">
               <h2 class="product__price">$<%= product.price %></h2>
