async request implemented for deleting products

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -16,7 +16,7 @@
   <%}%>
   <hr>
   <br>
-  <a href="/add-order" class="btn">Place Order!</a>
+  <a href="/add-order" class="btn">Order Now!</a>
 <%}else{%>
     <h1>Cart Empty</h1>
 <%}%>
