--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -2,5 +2,19 @@
 </head>
 <body>
     <%- include('../includes/navigation.ejs')%>
-    <h1>Nothing to checkout yet!</h1>
+    <main>
+           <% for(let item of cart) {%>
+            <h1><%= item.productId.title%> (<%= item.quantity%>)</h1>
+            <hr>
+            <h3>$<%= item.productId.price%> (each)</h3>
+            <form action="/cart-remove" method="POST">
+               <input type="hidden" name="_csrf" value="<%= csrfToken%>">
+            <input type="hidden" name="productId" value="<%= item.productId._id%>">
+            <button type="submit" class="btn">Remove</button>
+            </form>
+         <%}%>
+         <hr>
+         <br>
+         <a href="/add-order" class="btn">Place Order!</a>
+   </main>
 <%- include('../includes/end.ejs')%>
