--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -21,6 +21,8 @@
                 </li>
                 <%})%>
         </ul>
+        <hr>
+        <a href="/checkout" class="btn centered">Checkout</a>
         <%  } %>
     </main>
 <%- include('../includes/end.ejs')%>
