--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,12 +27,10 @@
             </div>
             <div class="card__actions">
               <a href="/admin/edit-product/<%= product._id%>?edit=true" class="btn">Edit</a>
-              <form action="/admin/delete-product" method="POST">
               <input type="hidden" name="productId" value="<%= product._id%>">  
               <input type="hidden" name="_csrf" value="<%= csrfToken%>">
-              <button type="submit" class="btn danger">Delete</button>
-              </form>
-            </div>
+              <button type="button" class="btn danger" onclick="deleteProduct(this)">Delete</button>
+             </div>
           </header>
         </article>
         <%}%>
@@ -42,3 +40,4 @@
       <%}%>
     </main>
 <%- include('../includes/end.ejs') %>
+<script src="/js/admin.js"></script>
