payment flow added

--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -9,5 +9,6 @@
             <hr>
            <%}%>
       <h2>Total: <%= totalAmount%></h2>
+  <a href="/add-order" class="btn">Pay Now!</a>
    </main>
 <%- include('../includes/end.ejs')%>
